--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+       // vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -44,6 +45,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.6.2'
 
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.github.chrisbanes:PhotoView:2.1.3'
 
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
 }
